src/slipway-renderer/tests/snapshots/snapshot_tests__snapshots@container_mixed_heights.card.json.snap
---
source: slipway-renderer/tests/snapshot_tests.rs
expression: card
input_file: slipway-renderer/tests/snapshot_inputs/container_mixed_heights.card.json
---
{
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "body": [
    {
      "type": "Container",
      "items": [
        {
          "type": "TextBlock",
          "text": "1",
          ".layout": {
            "rect": {
              "x": 24,
              "y": 24,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 12,
          "y": 12,
          "width": 126,
          "height": 34
        },
        "placement": "Top"
      }
    },
    {
      "type": "Container",
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "2",
          ".layout": {
            "rect": {
              "x": 24,
              "y": 70,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 12,
          "y": 58,
          "width": 126,
          "height": 131
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "3",
          ".layout": {
            "rect": {
              "x": 24,
              "y": 213,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 12,
          "y": 201,
          "width": 126,
          "height": 132
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "height": "stretch",
      "items": [
        {
          "type": "TextBlock",
          "text": "4",
          ".layout": {
            "rect": {
              "x": 24,
              "y": 357,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "minHeight": "300px",
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 12,
          "y": 345,
          "width": 126,
          "height": 397
        },
        "placement": "WithinVertical"
      }
    },
    {
      "type": "Container",
      "items": [
        {
          "type": "TextBlock",
          "text": "5",
          ".layout": {
            "rect": {
              "x": 24,
              "y": 766,
              "width": 100,
              "height": 10
            },
            "placement": "SoleVertical"
          }
        }
      ],
      "style": "accent",
      ".layout": {
        "rect": {
          "x": 12,
          "y": 754,
          "width": 126,
          "height": 34
        },
        "placement": "Bottom"
      }
    }
  ],
  "version": "1.5",
  "type": "AdaptiveCard",
  ".layout": {
    "rect": {
      "x": 0,
      "y": 0,
      "width": 150,
      "height": 800
    }
  }
}
